This commit was manufactured by cvs2svn to create tag 'tag_20061120_sachsen_StandNachInstallationSchwarzeElster'.