@@ -40,9 +40,10 @@
  ---------------------------------------------------------------------------------------------------*/
 package org.kalypso.ogc.sensor.zml.test;
 
+import java.io.File;
 import java.io.StringReader;
 import java.io.StringWriter;
-import java.net.URL;
+import java.net.MalformedURLException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 
@@ -60,7 +61,7 @@ import org.kalypso.ogc.sensor.ObservationUtilities;
 import org.kalypso.ogc.sensor.SensorException;
 import org.kalypso.ogc.sensor.impl.SimpleTuppleModel;
 import org.kalypso.ogc.sensor.zml.ZmlFactory;
-import org.kalypso.zml.Observation;
+import org.kalypso.zml.ObservationType;
 import org.xml.sax.InputSource;
 
 /**
@@ -73,18 +74,23 @@ public class ZmlTest extends TestCase
   private final DoubleComparator dc = new DoubleComparator( 0 );
 
   // contains the list of ZMLs to test
-  private final static String[] ZMLs = { "resources/beispiel.zml", "resources/inline_ex.zml" };
+  private final static String[] ZMLs =
+  {
+      "./etc/schemas/zml/beispiel.zml",
+      "./etc/schemas/zml/inline_ex.zml" };
 
-  public void testZmls( ) throws SensorException, ParseException
+  public void testZmls() throws MalformedURLException, SensorException, ParseException
   {
     for( int i = 0; i < ZMLs.length; i++ )
     {
       System.out.println( "Testing: " + ZMLs[i] );
 
-      final String obsID = ZMLs[i];
-      final URL zmlURL = getClass().getResource( ZMLs[i] );
+      final File zmlFile = new File( ZMLs[i] );
+      assertTrue( zmlFile.exists() );
 
-      final IObservation obs = ZmlFactory.parseXML( zmlURL, obsID );
+      final String obsID = zmlFile.getAbsolutePath();
+
+      final IObservation obs = ZmlFactory.parseXML( zmlFile.toURL(), obsID );
 
       _testGetName( obs );
       _testGetTarget( obs );
@@ -154,12 +160,12 @@ public class ZmlTest extends TestCase
     assertNotNull( vAxis2 );
 
     assertEquals( values.getElement( 0, dateAxis ), df.parse( "01.01.2004" ) );
-    assertTrue( dc.compare( (Number) values.getElement( 0, vAxis1 ), Double.valueOf( "1.0" ) ) == 0 );
-    assertTrue( dc.compare( (Number) values.getElement( 0, vAxis2 ), new Double( 11 ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( 0, vAxis1 ), Double.valueOf( "1.0" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( 0, vAxis2 ), new Double( 11 ) ) == 0 );
 
     assertEquals( values.getElement( 20, dateAxis ), df.parse( "21.01.2004" ) );
-    assertTrue( dc.compare( (Number) values.getElement( 20, vAxis1 ), Double.valueOf( "16.6" ) ) == 0 );
-    assertTrue( dc.compare( (Number) values.getElement( 20, vAxis2 ), Double.valueOf( "18.5" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( 20, vAxis1 ), Double.valueOf( "16.6" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( 20, vAxis2 ), Double.valueOf( "18.5" ) ) == 0 );
   }
 
   private void _testSetValues( final IObservation obs ) throws SensorException, ParseException
@@ -204,30 +210,31 @@ public class ZmlTest extends TestCase
 
     int i = 19;
     assertEquals( values.getElement( i, dateAxis ), df.parse( "20.01.2004" ) );
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "44" ) ) == 0 );
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "11" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( i, vAxis1 ), Double.valueOf( "44" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( i, vAxis2 ), Double.valueOf( "11" ) ) == 0 );
 
     i = 20;
     assertEquals( values.getElement( i, dateAxis ), df.parse( "21.01.2004" ) );
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "55" ) ) == 0 );
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "22" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( i, vAxis1 ), Double.valueOf( "55" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( i, vAxis2 ), Double.valueOf( "22" ) ) == 0 );
 
     i = 21;
     assertEquals( values.getElement( i, dateAxis ), df.parse( "22.01.2004" ) );
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "66" ) ) == 0 );
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "33" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( i, vAxis1 ), Double.valueOf( "66" ) ) == 0 );
+    assertTrue( dc.compare( values.getElement( i, vAxis2 ), Double.valueOf( "33" ) ) == 0 );
   }
 
   /**
    * Tests the new mechanism ('data'-Element) for storing Metadata stuff
    */
-  public void testMetadataEx( ) throws SensorException, FactoryException, JAXBException
+  public void testMetadataEx() throws MalformedURLException, SensorException, FactoryException, JAXBException
   {
-    final URL zmlURL = getClass().getResource( "resources/beispiel-metadata.zml" );
+    final File zmlFile = new File( "./etc/schemas/zml/beispiel-metadata.zml" );
+    assertTrue( zmlFile.exists() );
 
-    final IObservation obs = ZmlFactory.parseXML( zmlURL, "beispiel-metadata.zml" );
+    final IObservation obs = ZmlFactory.parseXML( zmlFile.toURL(), zmlFile.getAbsolutePath() );
 
-    final Observation xml = ZmlFactory.createXML( obs, null );
+    final ObservationType xml = ZmlFactory.createXML( obs, null );
     final StringWriter writer = new StringWriter();
     ZmlFactory.getMarshaller().marshal( xml, writer );
 
@@ -236,7 +243,7 @@ public class ZmlTest extends TestCase
     System.out.println( xmlStr );
 
     final IObservation obs2 = ZmlFactory.parseXML( new InputSource( new StringReader( xmlStr ) ), "fake-id", null );
-    final Observation xml2 = ZmlFactory.createXML( obs2, null );
+    final ObservationType xml2 = ZmlFactory.createXML( obs2, null );
     final StringWriter writer2 = new StringWriter();
     ZmlFactory.getMarshaller().marshal( xml2, writer2 );
     System.out.println( writer2.toString() );
