@@ -30,6 +30,7 @@
 package org.kalypso.ogc.wfs;
 
 import java.io.BufferedInputStream;
+import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
@@ -39,157 +40,71 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
 
-import javax.xml.namespace.QName;
-
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.ArrayUtils;
+import org.deegree.services.capabilities.DCPType;
+import org.deegree.services.capabilities.HTTP;
+import org.deegree.services.capabilities.Protocol;
+import org.deegree.services.wfs.capabilities.Capability;
+import org.deegree.services.wfs.capabilities.GetFeature;
+import org.deegree.services.wfs.capabilities.Request;
 import org.deegree.services.wfs.capabilities.WFSCapabilities;
 import org.deegree_impl.services.wfs.capabilities.WFSCapabilitiesFactory;
-import org.kalypso.contribs.java.lang.MultiException;
-import org.kalypso.contribs.java.xml.XMLHelper;
 import org.kalypso.ogc.gml.serialize.GmlSerializer;
 import org.kalypsodeegree.model.feature.FeatureVisitor;
 import org.kalypsodeegree.model.feature.GMLWorkspace;
 import org.kalypsodeegree_impl.model.feature.visitors.ResortVisitor;
 import org.kalypsodeegree_impl.model.feature.visitors.TransformVisitor;
 import org.opengis.cs.CS_CoordinateSystem;
-import org.w3c.dom.Document;
+import org.xml.sax.SAXException;
 
 /**
+ * 
  * @author doemming
  */
 public class WFSUtilities
 {
 
-  public static IWFSCapabilities getCapabilites( final URL baseURL ) throws Exception
+  public static WFSCapabilities getCapabilites( final URL baseURL ) throws IOException, SAXException, Exception
   {
-    final MultiException multiExcepts = new MultiException();
-    // TODO: we get problems here, if we already have a query part in the url
-    final URL urlGetCap = new URL( baseURL + "?" + "SERVICE=WFS&REQUEST=GetCapabilities" );
-    try
-    {
-      // try deegree1 implementation
-      final URLConnection conGetCap = urlGetCap.openConnection();
-      final InputStream isGetCap = conGetCap.getInputStream();
-      final Reader reader = new InputStreamReader( isGetCap );
-      final WFSCapabilities capabilities = WFSCapabilitiesFactory.createCapabilities( reader );
-      final Document dom = XMLHelper.getAsDOM( urlGetCap, false );
-      // return new WFSCapabilitiesDeegree1( capabilities );
-      return new WFSCapabilitiesVersion1( capabilities, dom );
-    }
-    catch( Exception e )
-    {
-      // e.printStackTrace();
-      multiExcepts.addException( e );
-    }
-    try
-    {
-      // hack
-      // File file = new File( "D:/eclipse3.1/tmp/XPlanungCaps.xml" );
-      // URL url = file.toURL();
-      final Document dom = XMLHelper.getAsDOM( urlGetCap, true );
-      return new WFSCapabilitiesFromDOM( dom );
-    }
-    catch( Exception e )
-    {
-      e.printStackTrace();
-      multiExcepts.addException( e );
-    }
-    throw multiExcepts;
+    final URL urlGetCap = new URL( baseURL + "?" + "SERVICE=WFS&VERSION=1.0.0&REQUEST=GetCapabilities" );
+    final URLConnection conGetCap = urlGetCap.openConnection();
+    final InputStream isGetCap = conGetCap.getInputStream();
+    final Reader reader = new InputStreamReader( isGetCap );
+    return WFSCapabilitiesFactory.createCapabilities( reader );
   }
 
-  public static String buildGetFeatureRequestGET( final IWFSCapabilities wfsCaps, final QName ftQName, final String filter, final String maxFeatureAsString )
+  public static String buildGetFeatureRequestPOST( final String featureTypeToLoad, final String filter,
+      final String maxFeatureAsString )
   {
     final StringBuffer sb = new StringBuffer();
-    sb.append( "SERVICE=WFS&REQUEST=GetFeature" );
-    if( maxFeatureAsString != null && maxFeatureAsString.length() > 0 )
-      sb.append( "&maxFeatures=" + maxFeatureAsString );
-    sb.append( "&version=" + wfsCaps.getVersion() );
-    sb.append( "&typename=" + ftQName.getLocalPart() );
-    String[] outFormats = wfsCaps.getGetFeatureOutputFormats();
-    String oFormat = null;
-    if( outFormats.length > 0 )
-    {
-      for( int i = 0; i < outFormats.length; i++ )
-      {
-        if( outFormats[i].equalsIgnoreCase( "gml2" ) )
-        {
-          oFormat = outFormats[i];
-          break;
-        }
-      }
-      if( oFormat == null )
-        oFormat = "GML2";
-    }
-    if( oFormat != null )
-      sb.append( "&outputFormat=" + oFormat );
-    if( filter != null && filter.length() > 0 )
-      sb.append( "&filter=" + filter );
-    return sb.toString();
-  }
-
-  public static String buildGetFeatureRequestPOST( final IWFSCapabilities wfsCaps, final QName ftQName, final String filter, final String maxFeatureAsString )
-  {
-    final StringBuffer sb = new StringBuffer();
-    // final int maxFeatures = 5000;
+    //    final int maxFeatures = 5000;
 
     sb.append( "<?xml version=\"1.0\" encoding=\"iso-8859-1\"?>\n" );// iso-8859-1
-    sb.append( "<wfs:GetFeature " );
-    final String[] outFormats = wfsCaps.getGetFeatureOutputFormats();
-    String oFormat = null;
-    if( outFormats.length > 0 )
-    {
-      for( int i = 0; i < outFormats.length; i++ )
-      {
-        if( outFormats[i].equalsIgnoreCase( "gml2" ) )
-        {
-          oFormat = outFormats[i];
-          break;
-        }
-      }
-      if( oFormat == null )
-        oFormat = outFormats[0];
-    }
-    if( oFormat != null )
-      sb.append( " outputFormat=\"" + oFormat + "\"" );
-    // sb.append( " outputFormat=\"GML2\"" );
-
-    String version = wfsCaps.getVersion();
-    if( version != null && version.length() > 0 )
-      sb.append( " version=\"" + version + "\" " );
+    sb.append( "<wfs:GetFeature outputFormat=\"GML2\"" );
     sb.append( " xmlns:gml=\"http://www.opengis.net/gml\" " );
     sb.append( " xmlns:wfs=\"http://www.opengis.net/wfs\"" );
     sb.append( " xmlns:ogc=\"http://www.opengis.net/ogc\"" );
     if( maxFeatureAsString != null && maxFeatureAsString.length() > 0 )
       sb.append( " maxFeatures=\"" + maxFeatureAsString + "\"" );
     sb.append( " >\n" );
-    String namespaceURI = ftQName.getNamespaceURI();
-    String localPart = ftQName.getLocalPart();
-    if( version == null ) // deegree1 gazetteer
-      sb.append( "<wfs:Query typeName=\"" + localPart + "\">\n" );
-    else if( namespaceURI != null && namespaceURI.length() > 0 )
-    {
-      sb.append( "<wfs:Query typeName=\"sn99:" + localPart + "\" xmlns:sn99=\"" + namespaceURI + "\">\n" );
-    }
-    else
-      sb.append( "<wfs:Query typeName=\"" + localPart + "\">\n" );
+    sb.append( "<wfs:Query typeName=\"" + featureTypeToLoad + "\">\n" );
     if( filter != null && filter.length() > 0 )
     {
       sb.append( filter ).append( "\n" );
-      // sb.append( "<ogc:Filter>\n" );
-      // sb.append( "<ogc:PropertyIsEqualTo wildCard=\"*\" singleChar=\"#\" escape=\"!\">\n" );
-      // sb.append( "<ogc:PropertyName>KENNZAHL</ogc:PropertyName>\n" );
-      // sb.append( "<ogc:Literal>59519000</ogc:Literal>\n" );
-      // sb.append( "</ogc:PropertyIsEqualTo>\n" );
-      // sb.append( "</ogc:Filter>\n" );
+      //      sb.append( "<ogc:Filter>\n" );
+      //      sb.append( "<ogc:PropertyIsEqualTo wildCard=\"*\" singleChar=\"#\" escape=\"!\">\n" );
+      //      sb.append( "<ogc:PropertyName>VERSKLASSE</ogc:PropertyName>\n" );
+      //      sb.append( "<ogc:Literal>3</ogc:Literal>\n" );
+      //      sb.append( "</ogc:PropertyIsEqualTo>\n" );
+      //      sb.append( "</ogc:Filter>\n" );
     }
     sb.append( "</wfs:Query>\n" );
     sb.append( "</wfs:GetFeature>" );
-    System.out.println( sb.toString() );
     return sb.toString();
   }
 
   /**
+   * 
    * @param baseURL
    * @param featureTypeToLoad
    * @param targetCRS
@@ -199,19 +114,43 @@ public class WFSUtilities
    * @return gmlworkspace
    * @throws Exception
    */
-  public static GMLWorkspace createGMLWorkspaceFromGetFeature( final URL baseURL, final QName featureTypeToLoad, final CS_CoordinateSystem targetCRS, final String filter, final String maxFeatureAsString ) throws Exception
+  public static GMLWorkspace createGMLWorkspaceFromGetFeature( final URL baseURL, final String featureTypeToLoad,
+      final CS_CoordinateSystem targetCRS, final String filter, final String maxFeatureAsString ) throws Exception
   {
     BufferedInputStream inputStream = null;
     PrintStream postWriter = null;
+
     try
     {
-      final IWFSCapabilities wfsCaps = WFSUtilities.getCapabilites( baseURL );
+      //      URL[] getOnlineResources = null;
+      URL[] postOnlineResources = null;
 
-      final URL[] baseURLGetCapabilitiesRequest = wfsCaps.getBaseURLGetFeatureRequest( IWFSCapabilities.METHODE_HTTP_POST );
-      if( baseURLGetCapabilitiesRequest.length > 0 )
+      //      URL m_schemaURL = new URL( baseURL + "?SERVICE=WFS&VERSION=1.0.0&REQUEST=DescribeFeatureType&typeName="
+      //          + featureTypeToLoad );
+      //       get wfs capabiliets to check which protocol types are supported by the service
+      final WFSCapabilities wfsCaps = WFSUtilities.getCapabilites( baseURL );
+
+      final Capability capability = wfsCaps.getCapability();
+      final Request request = capability.getRequest();
+      final GetFeature getFeature = request.getGetFeature();
+      final DCPType[] type = getFeature.getDCPType();
+      for( int i = 0; i < type.length; i++ )
       {
-
-        final URLConnection con = baseURLGetCapabilitiesRequest[0].openConnection();
+        final DCPType dcpt = type[i];
+        final Protocol protocol = dcpt.getProtocol();
+        if( protocol instanceof HTTP )
+        {
+          //          getOnlineResources = ( (HTTP)protocol ).getGetOnlineResources();
+          postOnlineResources = ( (HTTP)protocol ).getPostOnlineResources();
+          //          if( getOnlineResources.length > 0 )
+          //            getProtocol = true;
+          //          if( postOnlineResources.length > 0 )
+          //            postProtocol = true;
+        }
+      }
+      if( postOnlineResources.length > 0 )
+      {
+        final URLConnection con = postOnlineResources[0].openConnection();
         con.setDoOutput( true );
         con.setDoInput( true );
 
@@ -219,59 +158,33 @@ public class WFSUtilities
         OutputStream connectionOutputStream = con.getOutputStream();
         postWriter = new PrintStream( connectionOutputStream );
 
-        final String getFeaturePost = WFSUtilities.buildGetFeatureRequestPOST( wfsCaps, featureTypeToLoad, filter, maxFeatureAsString );
+        final String getFeaturePost = WFSUtilities.buildGetFeatureRequestPOST( featureTypeToLoad, filter,
+            maxFeatureAsString );
         postWriter.print( getFeaturePost );
 
-        // read response from the WFS server and create a GMLWorkspace
+        //read response from the WFS server and create a GMLWorkspace
         inputStream = new BufferedInputStream( con.getInputStream() );
-        //
-        // // Hack for testing, please leave this comments in the sources (doemming)
-        // // final File tmpFile = new File( "D:/eclipse3.1/tmp/gml.gml" );
-        // final File tmpFile = new File( "F:/eclipse3.1/tmp/gmlEnvelope.gml" );
-        // // final File tmpFile = new File( "C:/TMP/xplanung.gml" );
-        // final OutputStream outStream = new FileOutputStream( tmpFile );
-        // StreamUtilities.streamCopy( inputStream, outStream );
-        // IOUtils.closeQuietly( inputStream );
-        // IOUtils.closeQuietly( outStream );
 
-        final URL schemaURLHint = createDescribeFeatureTypeRequestURL( wfsCaps, featureTypeToLoad );
-        // final GMLSchema gmlSchema = GMLSchemaFactory.createGMLSchema(schemaURL);
+        // Hack for testing
+        //                final File tmpFile = new File( "C:\\TMP\\test.txt" );
+        //                final OutputStream outStream = new FileOutputStream( tmpFile );
+        //                StreamUtilities.streamCopy( inputStream, outStream );
+        //                IOUtils.closeQuietly( inputStream );
+        //                IOUtils.closeQuietly( outStream );
 
-        final GMLWorkspace workspace = GmlSerializer.createGMLWorkspace( inputStream, schemaURLHint, false, null );
+        final URL schemaURL = createDescribeFeatureTypeRequestURL( baseURL, featureTypeToLoad );
+        final GMLWorkspace workspace = GmlSerializer.createGMLWorkspace( inputStream, schemaURL );
         inputStream.close();
         IOUtils.closeQuietly( inputStream );
 
         if( targetCRS != null )
-          workspace.accept( new TransformVisitor( targetCRS ), workspace.getRootFeature(), FeatureVisitor.DEPTH_INFINITE );
+          workspace.accept( new TransformVisitor( targetCRS ), workspace.getRootFeature(),
+              FeatureVisitor.DEPTH_INFINITE );
         workspace.accept( new ResortVisitor(), workspace.getRootFeature(), FeatureVisitor.DEPTH_INFINITE );
 
         return workspace;
       }
-      else
-      {
-        final URL[] baseURLGetCapabilitiesRequestGET = wfsCaps.getBaseURLGetFeatureRequest( IWFSCapabilities.METHODE_HTTP_GET );
-        if( baseURLGetCapabilitiesRequestGET.length > 0 )
-        {
-
-          final URL url = new URL( baseURLGetCapabilitiesRequestGET[0] + WFSUtilities.buildGetFeatureRequestGET( wfsCaps, featureTypeToLoad, filter, maxFeatureAsString ) );
-          final InputStream stream = url.openStream();
-
-          inputStream = new BufferedInputStream( stream );
-          final URL schemaURLHint = createDescribeFeatureTypeRequestURL( wfsCaps, featureTypeToLoad );
-
-          final GMLWorkspace workspace = GmlSerializer.createGMLWorkspace( inputStream, schemaURLHint, false, null );
-          inputStream.close();
-          IOUtils.closeQuietly( inputStream );
-
-          if( targetCRS != null )
-            workspace.accept( new TransformVisitor( targetCRS ), workspace.getRootFeature(), FeatureVisitor.DEPTH_INFINITE );
-          workspace.accept( new ResortVisitor(), workspace.getRootFeature(), FeatureVisitor.DEPTH_INFINITE );
-
-          return workspace;
-        }
-        throw new UnsupportedOperationException( "GetFeature-Request: HTTP/Get is not supportet" );
-      }
-
+      throw new UnsupportedOperationException( "GetFeature-Request: HTTP/Get is not supportet" );
     }
     finally
     {
@@ -285,64 +198,12 @@ public class WFSUtilities
    * @return url to describefeaturetyperequest
    * @throws MalformedURLException
    */
-  public static URL createDescribeFeatureTypeRequestURL( IWFSCapabilities wfsCaps, final QName ftQName ) throws MalformedURLException
+  private static URL createDescribeFeatureTypeRequestURL( final URL baseURL, final String featureType )
+      throws MalformedURLException
   {
-    final URL[] baseURL = wfsCaps.getBaseURLDescribeFeatureTypeRequest( IWFSCapabilities.METHODE_HTTP_GET );
-    final String baseURLAsString = baseURL[0].toString();
-    if( wfsCaps.getVersion() == null || wfsCaps.getVersion().startsWith( "1.0" ) )
-    {
-      // TODO support namespaces
-      if( baseURL.length > 0 )
-      {
-        final StringBuffer result = new StringBuffer( baseURLAsString );
-        if( baseURLAsString.indexOf( "?" ) < 0 )
-          result.append( "?" );
-        result.append( "SERVICE=WFS&VERSION=1.0.0&REQUEST=DescribeFeatureType" );
-        result.append( "&typename=" + ftQName.getLocalPart() );
-        return new URL( result.toString() );
-      }
-    }
-    if( wfsCaps.getVersion().startsWith( "1.1" ) )
-    {
-      if( baseURL.length > 0 )
-      {
-        final StringBuffer result = new StringBuffer( baseURLAsString );
-        if( baseURLAsString.indexOf( "?" ) < 0 )
-          result.append( "?" );
-        result.append( "SERVICE=WFS&VERSION=1.1.0&REQUEST=DescribeFeatureType" );
-        final String localPart = ftQName.getLocalPart();
-        final String namespaceURI = ftQName.getNamespaceURI();
-        final String prefix = ftQName.getPrefix();
-        // check if featuretype is qualified
-        if( namespaceURI == null || namespaceURI.length() < 1 )
-          result.append( "&TYPENAME=" + ftQName.getLocalPart() );
-        // check if prefix is provided
-        else if( prefix != null && prefix.length() > 0 )
-        {
-          result.append( "&TYPENAME=" + prefix + ":" + localPart );
-          result.append( "&NAMESPACE=xmlns(" + prefix + "=" + namespaceURI + ")" );
-        }
-        // use standard prefix
-        else
-        {
-          result.append( "&TYPENAME=" + "sn99:" + localPart );
-          result.append( "&NAMESPACE=xmlns(sn99=" + namespaceURI + ")" );
-        }
-        // TODO check for chars to escape in namespace
-        return new URL( result.toString() );
-        // http://wfs.lat-lon.de/deegreegazetteer/ogcwebservice?REQUEST=DescribeFeatureType&version=1.1.0&service=WFS&TYPENAME=ns:gns_locationinstance&NAMESPACE=xmlns(ns=http://www.deegree.org/app)
-        // http://wfs.lat-lon.de/deegreegazetteer/ogcwebservice?REQUEST=GetCapabilities&version=1.1.0&service=WFS
-      }
-    }
-    throw new UnsupportedOperationException();
-  }
-
-  public static String[] getAllFilterCapabilitesOperations( final IWFSCapabilities capabilities )
-  {
-    Object[] operators = ArrayUtils.addAll( capabilities.getLogicalOperators(), capabilities.getSpatialOperators() );
-    ArrayUtils.addAll( operators, capabilities.getGeometryOperands() );
-    ArrayUtils.addAll( operators, capabilities.getComparisonOperators() );
-    ArrayUtils.addAll( operators, capabilities.getFunctionArithmetics() );
-    return (String[]) operators;
+    final StringBuffer result = new StringBuffer( baseURL.toString() );
+    result.append( "?SERVICE=WFS&VERSION=1.0.0&REQUEST=DescribeFeatureType" );
+    result.append( "&typename=" + featureType );
+    return new URL( result.toString() );
   }
 }
